# rainman

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  build.sh  clean.sh  compose.yaml  devSetup.sh  localPublish.sh  project-description.md  pyproject.toml  runTests.sh  run_demo.py
config/: adversary_config.json  cluster.json
data/: expected_state.json  wal.jsonl
data/sample/: businesses.jsonl
docs/: phase-4.md  project-description.md
logs/: verification_20260630T011437Z.json  verification_20260630T012123Z.json  verification_20260630T012835Z.json  verification_20260630T230035Z.json
scripts/: build_oracle.py  load_businesses.py  load_reviews.py  sample_data.py  verify_cluster.py
src/rainman/: __init__.py
src/rainman/agents/: adversary_agent.py  recovery_agent.py
src/rainman/node/: __init__.py  config.py  election.py  main.py  replication.py  storage.py
tests/: test_agents.py  test_election.py  test_replication.py  test_storage.py
