[project]
name = "rainman"
version = "1.0.0"
description = "Inspired by the modern classic \"Designing Data-Intensive Applications\" by Martin Kleppmann, this repository implements a simple experimental database for exploration, testing, and knowledge acquisition."
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "fastapi",
    "httpx",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "hatchling>=1.27",
    "pipdeptree",
    "pytest>=8.4.2",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"